--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="iportfolio-2.jpg" alt="portfolio 2 image" title="portfolio 2 picture" class="img-fluid">
+          <img src="download.jpeg" alt="portfolio 2 image" title="portfolio 2 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
               <h4>Investment Strategies</h4>
@@ -376,7 +376,7 @@
         <div class="cta-info w-100">
           <h4 class="display-4 fw-bold">100% Satisfaction Guaranteed</h4>
           <p class="lh-lg">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam alias optio minima, tempore architecto sint ipsam dolore tempora facere laboriosam corrupti!
+            Connect with us today to discover how max-zen can guide you towards financial success through customized solutions and expert guidance.
           </p>
           <h3 class="display-3--brief">What will be the next step?</h3>
           <ul class="cta-info__list">
